# bilby_rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: maturin-release.yml  pytest.yml  rust.yml
examples/: comparison_test.py  demonstration.ipynb  profile.py  utils.py
src/: geometry.rs  lib.rs  main.rs  time.rs
src/geometry/: antenna.rs  polarization.rs  response.rs  rotation.rs  three.rs  util.rs
